--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,26 @@
 language: python
 
 python:
-  - "3.7"
+  - "3.8"
 
 jobs:
   include:
     - stage: "Build Lab 2."
       name: "Run tests for Lab 2"
-      python: 3.7
+      python: 3.8
       install:
         - cd ./ex2/
         - pipenv install
       script: pipenv run pytest tests/tests.py || true
     - stage: "Build Lab 3."
-      name: "Run Djungo Server and test it accessibility. Fail to run and test"
-      python: 3.7
+      name: "Run Django Server and test it accessibility. Fail to run and test"
+      python: 3.8
       install:
         - cd ./ex3/
         - pipenv install
-      script: ./scripts/travis-build.sh
+        - pipenv install requests
+        - pipenv install django
+      script: bash ./script/travis-build.sh
     - stage: "Build Lab 4."
       name: "Build Docker images & Home task"
       services:
@@ -26,9 +28,10 @@ jobs:
       install:
         - cd ./ex4/
       script:
-        - docker build -t bobas/lab4-examples:django-travis .
+        - docker build -t khrystyna2411/devops_lab4:django-travis .
         - docker images
-        - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin; docker push bobas/lab4-examples:django-travis; else echo "PR skip deploy"; fi
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push khrystyna2411/devops_lab4:django-travis
     - stage: "Build Lab 5."
       name: "Build and run Docker images via make"
       services:
