--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,28 @@ jobs:
         - pipenv install requests
         - pipenv install django
       script: bash ./script/travis-build.sh
-    
+    - stage: "Build Lab 4."
+      name: "Build Docker images & Home task"
+      services:
+        - docker
+      install:
+        - cd ./ex4/
+      script:
+        - docker build -t arsenmatiiash/lab4:django-travis .
+        - docker images
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push arsenmatiiash/lab4:django-travis
+    - stage: "Build Lab 5."
+      name: "Build and run Docker images via make"
+      services:
+        - docker
+      install:
+        - cd ./ex5/
+        - make app
+        - make tests
+      script:
+        - make run
+        - make test-app
 branches:
   only:
-    - master
+    - main
